{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 68,
  "lineage": "7768b725-b9b6-fc7e-feb2-b426fb413be7",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f770ae59ec58d12e",
            "domain": "vpc",
            "id": "eipalloc-0be11d133a01858ba",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06817e23d81338e5f",
            "private_dns": "ip-10-0-1-61.ec2.internal",
            "private_ip": "10.0.1.61",
            "public_dns": "ec2-52-207-6-245.compute-1.amazonaws.com",
            "public_ip": "52.207.6.245",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.compute.aws_network_interface.pm4_nat_interface_a",
            "module.compute.aws_subnet.pm4_dmz_a",
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-05379d91807a7ccf7",
            "domain": "vpc",
            "id": "eipalloc-0587540f07a9abd9c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0741f4054d51266b0",
            "private_dns": "ip-10-0-2-91.ec2.internal",
            "private_ip": "10.0.2.91",
            "public_dns": "ec2-34-207-40-121.compute-1.amazonaws.com",
            "public_ip": "34.207.40.121",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.compute.aws_network_interface.pm4_nat_interface_b",
            "module.compute.aws_subnet.pm4_dmz_b",
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "pm4_nat_instance_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a9d4a05375b2763",
            "arn": "arn:aws:ec2:us-east-1:580741598336:instance/i-01398620e0551580a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01398620e0551580a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "pm4_nat_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-06817e23d81338e5f"
              }
            ],
            "primary_network_interface_id": "eni-06817e23d81338e5f",
            "private_dns": "ip-10-0-1-61.ec2.internal",
            "private_ip": "10.0.1.61",
            "public_dns": "ec2-52-207-6-245.compute-1.amazonaws.com",
            "public_ip": "52.207.6.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-03a522e9614d9a5dd",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-01fbe0e5a09971b1a",
            "tags": {
              "Name": "PM4-example-NAT-Instance-A"
            },
            "tags_all": {
              "Name": "PM4-example-NAT-Instance-A"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-079007c7f095e7845"
            ]
          },
          "dependencies": [
            "module.compute.aws_key_pair.pm4_nat_key",
            "module.compute.aws_network_interface.pm4_nat_interface_a",
            "module.compute.aws_subnet.pm4_dmz_a",
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "pm4_nat_instance_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a9d4a05375b2763",
            "arn": "arn:aws:ec2:us-east-1:580741598336:instance/i-0882a376841f64514",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0882a376841f64514",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "pm4_nat_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0741f4054d51266b0"
              }
            ],
            "primary_network_interface_id": "eni-0741f4054d51266b0",
            "private_dns": "ip-10-0-2-91.ec2.internal",
            "private_ip": "10.0.2.91",
            "public_dns": "ec2-34-207-40-121.compute-1.amazonaws.com",
            "public_ip": "34.207.40.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-06e608ed0a346fc0c",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-05873ead6d3fceeb7",
            "tags": {
              "Name": "PM4-example-NAT-Instance-A"
            },
            "tags_all": {
              "Name": "PM4-example-NAT-Instance-A"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-079007c7f095e7845"
            ]
          },
          "dependencies": [
            "module.compute.aws_network_interface.pm4_nat_interface_b",
            "module.compute.aws_subnet.pm4_dmz_b",
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pm4_client_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:internet-gateway/igw-062131f4d5ee31a86",
            "id": "igw-062131f4d5ee31a86",
            "owner_id": "580741598336",
            "tags": {
              "Name": "PM4-example-IGW"
            },
            "tags_all": {
              "Name": "PM4-example-IGW"
            },
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "dependencies": [
            "module.compute.aws_vpc.pm4_client_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "pm4_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:580741598336:loadbalancer/app/PM4-example-ALB/989bcdbb14d5b37d",
            "arn_suffix": "app/PM4-example-ALB/989bcdbb14d5b37d",
            "dns_name": "PM4-example-ALB-429265326.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:580741598336:loadbalancer/app/PM4-example-ALB/989bcdbb14d5b37d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "PM4-example-ALB",
            "security_groups": [
              "sg-04819a580906ebc5f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-080dc98675d8cc66e"
              },
              {
                "subnet_id": "subnet-0fef3f2292d25f0f2"
              }
            ],
            "subnets": [
              "subnet-080dc98675d8cc66e",
              "subnet-0fef3f2292d25f0f2"
            ],
            "tags": {
              "Name": "PM4-example-ALB"
            },
            "tags_all": {
              "Name": "PM4-example-ALB"
            },
            "vpc_id": "vpc-09dc4f72e538d074c",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.compute.aws_security_group.pm4_alb_sg",
            "module.compute.aws_subnet.pm4_alb_a",
            "module.compute.aws_subnet.pm4_alb_b",
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "pm4_secure_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:580741598336:listener/app/PM4-example-ALB/989bcdbb14d5b37d/79306033503bcd18",
            "certificate_arn": "arn:aws:acm:us-east-1:580741598336:certificate/923dcbcf-6cd4-44fc-b488-0fc72f19302e",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "google.com",
                    "path": "/#{path}",
                    "port": "#{port}",
                    "protocol": "#{protocol}",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:580741598336:listener/app/PM4-example-ALB/989bcdbb14d5b37d/79306033503bcd18",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:580741598336:loadbalancer/app/PM4-example-ALB/989bcdbb14d5b37d",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_acm_certificate.pm4_cert",
            "module.compute.aws_lb.pm4_alb",
            "module.compute.aws_security_group.pm4_alb_sg",
            "module.compute.aws_subnet.pm4_alb_a",
            "module.compute.aws_subnet.pm4_alb_b",
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "pm4_unsecure_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:580741598336:listener/app/PM4-example-ALB/989bcdbb14d5b37d/b2b3ca292fe00e6f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:580741598336:listener/app/PM4-example-ALB/989bcdbb14d5b37d/b2b3ca292fe00e6f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:580741598336:loadbalancer/app/PM4-example-ALB/989bcdbb14d5b37d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_lb.pm4_alb",
            "module.compute.aws_security_group.pm4_alb_sg",
            "module.compute.aws_subnet.pm4_alb_a",
            "module.compute.aws_subnet.pm4_alb_b",
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "stm_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:580741598336:targetgroup/PM4-example-STM-TG/dfa410f3f019de12",
            "arn_suffix": "targetgroup/PM4-example-STM-TG/dfa410f3f019de12",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:580741598336:targetgroup/PM4-example-STM-TG/dfa410f3f019de12",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "PM4-example-STM-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "dependencies": [
            "module.compute.aws_vpc.pm4_client_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "pm4_nat_interface_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-06817e23d81338e5f",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "12:13:b6:62:0a:61",
            "private_dns_name": "ip-10-0-1-61.ec2.internal",
            "private_ip": "10.0.1.61",
            "private_ips": [
              "10.0.1.61"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-079007c7f095e7845"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-01fbe0e5a09971b1a",
            "tags": {
              "Name": "PM4-NAT-example-ENI-A"
            },
            "tags_all": {
              "Name": "PM4-NAT-example-ENI-A"
            }
          },
          "dependencies": [
            "module.compute.aws_subnet.pm4_dmz_a",
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "pm4_nat_interface_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0741f4054d51266b0",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "0a:7a:e1:39:9a:09",
            "private_dns_name": "ip-10-0-2-91.ec2.internal",
            "private_ip": "10.0.2.91",
            "private_ips": [
              "10.0.2.91"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-079007c7f095e7845"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-05873ead6d3fceeb7",
            "tags": {
              "Name": "PM4-NAT-example-ENI-B"
            },
            "tags_all": {
              "Name": "PM4-NAT-example-ENI-B"
            }
          },
          "dependencies": [
            "module.compute.aws_subnet.pm4_dmz_b",
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pm4_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:route-table/rtb-0cfca7bfc2e4f9394",
            "id": "rtb-0cfca7bfc2e4f9394",
            "owner_id": "580741598336",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PM4-example-BackEnd-Route"
            },
            "tags_all": {
              "Name": "PM4-example-BackEnd-Route"
            },
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_vpc.pm4_client_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pm4_dmz_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:route-table/rtb-0fb0b6a262edeb020",
            "id": "rtb-0fb0b6a262edeb020",
            "owner_id": "580741598336",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-062131f4d5ee31a86",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PM4-example-DMZ-Route-RT"
            },
            "tags_all": {
              "Name": "PM4-example-DMZ-Route-RT"
            },
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_internet_gateway.pm4_client_igw",
            "module.compute.aws_vpc.pm4_client_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pm4_web_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:route-table/rtb-0b73e6dc8d12b9e41",
            "id": "rtb-0b73e6dc8d12b9e41",
            "owner_id": "580741598336",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-06817e23d81338e5f",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PM4-example-NAT-Route-A"
            },
            "tags_all": {
              "Name": "PM4-example-NAT-Route-A"
            },
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_network_interface.pm4_nat_interface_a",
            "module.compute.aws_subnet.pm4_dmz_a",
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pm4_web_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:route-table/rtb-0f430d5c44c9b3529",
            "id": "rtb-0f430d5c44c9b3529",
            "owner_id": "580741598336",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0741f4054d51266b0",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PM4-example-NAT-Route-B"
            },
            "tags_all": {
              "Name": "PM4-example-NAT-Route-B"
            },
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_network_interface.pm4_nat_interface_b",
            "module.compute.aws_subnet.pm4_dmz_b",
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pm4_alb_rt_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b7de4cd6b797dfc",
            "route_table_id": "rtb-0fb0b6a262edeb020",
            "subnet_id": "subnet-080dc98675d8cc66e"
          },
          "dependencies": [
            "module.compute.aws_internet_gateway.pm4_client_igw",
            "module.compute.aws_route_table.pm4_dmz_rt",
            "module.compute.aws_subnet.pm4_alb_a",
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pm4_alb_rt_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03858485803365b00",
            "route_table_id": "rtb-0fb0b6a262edeb020",
            "subnet_id": "subnet-0fef3f2292d25f0f2"
          },
          "dependencies": [
            "module.compute.aws_internet_gateway.pm4_client_igw",
            "module.compute.aws_route_table.pm4_dmz_rt",
            "module.compute.aws_subnet.pm4_alb_b",
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pm4_backend_rt_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa970b769a5f2ab3",
            "route_table_id": "rtb-0cfca7bfc2e4f9394",
            "subnet_id": "subnet-083d957ab4812e600"
          },
          "dependencies": [
            "module.compute.aws_route_table.pm4_backend",
            "module.compute.aws_subnet.pm4_backend_a",
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pm4_backend_rt_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001210b4b0f7080e0",
            "route_table_id": "rtb-0cfca7bfc2e4f9394",
            "subnet_id": "subnet-009d404e4af71156e"
          },
          "dependencies": [
            "module.compute.aws_route_table.pm4_backend",
            "module.compute.aws_subnet.pm4_backend_b",
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pm4_dmz_rt_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c53457e0e454d0e3",
            "route_table_id": "rtb-0fb0b6a262edeb020",
            "subnet_id": "subnet-01fbe0e5a09971b1a"
          },
          "dependencies": [
            "module.compute.aws_internet_gateway.pm4_client_igw",
            "module.compute.aws_route_table.pm4_dmz_rt",
            "module.compute.aws_subnet.pm4_dmz_a",
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pm4_dmz_rt_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031867ee71abc2151",
            "route_table_id": "rtb-0fb0b6a262edeb020",
            "subnet_id": "subnet-05873ead6d3fceeb7"
          },
          "dependencies": [
            "module.compute.aws_internet_gateway.pm4_client_igw",
            "module.compute.aws_route_table.pm4_dmz_rt",
            "module.compute.aws_subnet.pm4_dmz_b",
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pm4_tasks_rt_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0658d7b8e158bfb47",
            "route_table_id": "rtb-0b73e6dc8d12b9e41",
            "subnet_id": "subnet-0be149c20f8d825aa"
          },
          "dependencies": [
            "module.compute.aws_network_interface.pm4_nat_interface_a",
            "module.compute.aws_route_table.pm4_web_a",
            "module.compute.aws_subnet.pm4_dmz_a",
            "module.compute.aws_subnet.pm4_tasks_a",
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pm4_tasks_rt_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015491a54a86bc601",
            "route_table_id": "rtb-0f430d5c44c9b3529",
            "subnet_id": "subnet-0d7c3a3880003d6e6"
          },
          "dependencies": [
            "module.compute.aws_network_interface.pm4_nat_interface_b",
            "module.compute.aws_route_table.pm4_web_b",
            "module.compute.aws_subnet.pm4_dmz_b",
            "module.compute.aws_subnet.pm4_tasks_b",
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pm4_web_rt_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0142a93c9ceaf3924",
            "route_table_id": "rtb-0b73e6dc8d12b9e41",
            "subnet_id": "subnet-08c42a7b9d1e1740a"
          },
          "dependencies": [
            "module.compute.aws_network_interface.pm4_nat_interface_a",
            "module.compute.aws_route_table.pm4_web_a",
            "module.compute.aws_subnet.pm4_dmz_a",
            "module.compute.aws_subnet.pm4_web_a",
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pm4_web_rt_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e4905a47153b3db",
            "route_table_id": "rtb-0f430d5c44c9b3529",
            "subnet_id": "subnet-07e9a1a9fc8b6a349"
          },
          "dependencies": [
            "module.compute.aws_network_interface.pm4_nat_interface_b",
            "module.compute.aws_route_table.pm4_web_b",
            "module.compute.aws_subnet.pm4_dmz_b",
            "module.compute.aws_subnet.pm4_web_b",
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pm4_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:security-group/sg-04819a580906ebc5f",
            "description": "Allow HTTP/S on ALB",
            "egress": [],
            "id": "sg-04819a580906ebc5f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "pm4-example-alb-sg",
            "name_prefix": "",
            "owner_id": "580741598336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PM4-example-ALB-SG"
            },
            "tags_all": {
              "Name": "PM4-example-ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_vpc.pm4_client_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pm4_backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:security-group/sg-0782391951a228730",
            "description": "Allowing MySQL port for Tasks and Web",
            "egress": [],
            "id": "sg-0782391951a228730",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03f3e971e28f2408f",
                  "sg-0ec5fe60ccbcef236"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "pm4-example-backend-sg",
            "name_prefix": "",
            "owner_id": "580741598336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PM4-example-BackEnd-SG"
            },
            "tags_all": {
              "Name": "PM4-example-BackEnd-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_security_group.pm4_tasks_sg",
            "module.compute.aws_security_group.pm4_web_sg",
            "module.compute.aws_vpc.pm4_client_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pm4_dmz_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:security-group/sg-04a7eefe861c226ba",
            "description": "Allowing all traffic from Tasks and Web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a7eefe861c226ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-03f3e971e28f2408f",
                  "sg-0ec5fe60ccbcef236"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "pm4-example-dmz-sg",
            "name_prefix": "",
            "owner_id": "580741598336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PM4-example-DMZ-SG"
            },
            "tags_all": {
              "Name": "PM4-example-DMZ-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_security_group.pm4_tasks_sg",
            "module.compute.aws_security_group.pm4_web_sg",
            "module.compute.aws_vpc.pm4_client_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pm4_efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:security-group/sg-05bcc1948cad2aee3",
            "description": "Allowing NFS port for EFS for Tasks and Web",
            "egress": [],
            "id": "sg-05bcc1948cad2aee3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03f3e971e28f2408f",
                  "sg-0ec5fe60ccbcef236"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "pm4-example-efs-sg",
            "name_prefix": "",
            "owner_id": "580741598336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PM4-example-EFS-SG"
            },
            "tags_all": {
              "Name": "PM4-example-EFS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_security_group.pm4_tasks_sg",
            "module.compute.aws_security_group.pm4_web_sg",
            "module.compute.aws_vpc.pm4_client_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pm4_redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:security-group/sg-02014ffb27fee7f8b",
            "description": "Allowing connection from Tasks and Web",
            "egress": [],
            "id": "sg-02014ffb27fee7f8b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03f3e971e28f2408f",
                  "sg-0ec5fe60ccbcef236"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "pm4-example-redis-sg",
            "name_prefix": "",
            "owner_id": "580741598336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PM4-example-Redis-SG"
            },
            "tags_all": {
              "Name": "PM4-example-Redis-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_security_group.pm4_tasks_sg",
            "module.compute.aws_security_group.pm4_web_sg",
            "module.compute.aws_vpc.pm4_client_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pm4_tasks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:security-group/sg-03f3e971e28f2408f",
            "description": "Allowing SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f3e971e28f2408f",
            "ingress": [],
            "name": "pm4-example-tasks-sg",
            "name_prefix": "",
            "owner_id": "580741598336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PM4-example-Tasks-SG"
            },
            "tags_all": {
              "Name": "PM4-example-Tasks-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_vpc.pm4_client_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pm4_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:security-group/sg-0ec5fe60ccbcef236",
            "description": "Allowing SSH for DMZ and HTTP/S ports for ALB as all traffic too",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ec5fe60ccbcef236",
            "ingress": [],
            "name": "pm4-example-web-sg",
            "name_prefix": "",
            "owner_id": "580741598336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PM4-example-Web-SG"
            },
            "tags_all": {
              "Name": "PM4-example-Web-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_vpc.pm4_client_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dmz-sg-add-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-2185338825",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ec5fe60ccbcef236",
            "self": false,
            "source_security_group_id": "sg-04819a580906ebc5f",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_security_group.pm4_alb_sg",
            "module.compute.aws_security_group.pm4_web_sg",
            "module.compute.aws_vpc.pm4_client_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dmz-sg-add-tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-2032263374",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03f3e971e28f2408f",
            "self": false,
            "source_security_group_id": "sg-04a7eefe861c226ba",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_security_group.pm4_dmz_sg",
            "module.compute.aws_security_group.pm4_tasks_sg",
            "module.compute.aws_security_group.pm4_web_sg",
            "module.compute.aws_vpc.pm4_client_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dmz-sg-add-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-1213433182",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ec5fe60ccbcef236",
            "self": false,
            "source_security_group_id": "sg-04a7eefe861c226ba",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_security_group.pm4_dmz_sg",
            "module.compute.aws_security_group.pm4_tasks_sg",
            "module.compute.aws_security_group.pm4_web_sg",
            "module.compute.aws_vpc.pm4_client_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pm4_alb_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:subnet/subnet-080dc98675d8cc66e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.13.0/24",
            "id": "subnet-080dc98675d8cc66e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "580741598336",
            "tags": {
              "Name": "PM4-example-ALB-Subnet-A"
            },
            "tags_all": {
              "Name": "PM4-example-ALB-Subnet-A"
            },
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "dependencies": [
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pm4_alb_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:subnet/subnet-0fef3f2292d25f0f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.14.0/24",
            "id": "subnet-0fef3f2292d25f0f2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "580741598336",
            "tags": {
              "Name": "PM4-example-ALB-Subnet-B"
            },
            "tags_all": {
              "Name": "PM4-example-ALB-Subnet-B"
            },
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "dependencies": [
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pm4_backend_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:subnet/subnet-083d957ab4812e600",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.15.0/24",
            "id": "subnet-083d957ab4812e600",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "580741598336",
            "tags": {
              "Name": "PM4-example-BackEnd-Subnet-A"
            },
            "tags_all": {
              "Name": "PM4-example-BackEnd-Subnet-A"
            },
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "dependencies": [
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pm4_backend_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:subnet/subnet-009d404e4af71156e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.16.0/24",
            "id": "subnet-009d404e4af71156e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "580741598336",
            "tags": {
              "Name": "PM4-example-BackEnd-Subnet-B"
            },
            "tags_all": {
              "Name": "PM4-example-BackEnd-Subnet-B"
            },
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "dependencies": [
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pm4_dmz_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:subnet/subnet-01fbe0e5a09971b1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-01fbe0e5a09971b1a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "580741598336",
            "tags": {
              "Name": "PM4-example-DMZ-Subnet-A"
            },
            "tags_all": {
              "Name": "PM4-example-DMZ-Subnet-A"
            },
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "dependencies": [
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pm4_dmz_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:subnet/subnet-05873ead6d3fceeb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-05873ead6d3fceeb7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "580741598336",
            "tags": {
              "Name": "PM4-example-DMZ-Subnet-B"
            },
            "tags_all": {
              "Name": "PM4-example-DMZ-Subnet-B"
            },
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "dependencies": [
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pm4_efs_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:subnet/subnet-0af4a44dc5a4804e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0af4a44dc5a4804e4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "580741598336",
            "tags": {
              "Name": "PM4-example-EFS-Subnet-A"
            },
            "tags_all": {
              "Name": "PM4-example-EFS-Subnet-A"
            },
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "dependencies": [
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pm4_efs_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:subnet/subnet-038b2a60929bb7ade",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-038b2a60929bb7ade",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "580741598336",
            "tags": {
              "Name": "PM4-example-EFS-Subnet-B"
            },
            "tags_all": {
              "Name": "PM4-example-EFS-Subnet-B"
            },
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "dependencies": [
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pm4_redis_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:subnet/subnet-00ef35244376a8fd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-00ef35244376a8fd1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "580741598336",
            "tags": {
              "Name": "PM4-example-Redis-Subnet-A"
            },
            "tags_all": {
              "Name": "PM4-example-Redis-Subnet-A"
            },
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "dependencies": [
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pm4_redis_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:subnet/subnet-03e443b8a77799334",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-03e443b8a77799334",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "580741598336",
            "tags": {
              "Name": "PM4-example-Redis-Subnet-B"
            },
            "tags_all": {
              "Name": "PM4-example-Redis-Subnet-B"
            },
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "dependencies": [
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pm4_tasks_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:subnet/subnet-0be149c20f8d825aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.9.0/24",
            "id": "subnet-0be149c20f8d825aa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "580741598336",
            "tags": {
              "Name": "PM4-example-Tasks-Subnet-A"
            },
            "tags_all": {
              "Name": "PM4-example-Tasks-Subnet-A"
            },
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "dependencies": [
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pm4_tasks_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:subnet/subnet-0d7c3a3880003d6e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0d7c3a3880003d6e6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "580741598336",
            "tags": {
              "Name": "PM4-example-Tasks-Subnet-B"
            },
            "tags_all": {
              "Name": "PM4-example-Tasks-Subnet-B"
            },
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "dependencies": [
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pm4_web_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:subnet/subnet-08c42a7b9d1e1740a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-08c42a7b9d1e1740a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "580741598336",
            "tags": {
              "Name": "PM4-example-Web-Subnet-A"
            },
            "tags_all": {
              "Name": "PM4-example-Web-Subnet-A"
            },
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "dependencies": [
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pm4_web_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:subnet/subnet-07e9a1a9fc8b6a349",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-07e9a1a9fc8b6a349",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "580741598336",
            "tags": {
              "Name": "PM4-example-Web-Subnet-B"
            },
            "tags_all": {
              "Name": "PM4-example-Web-Subnet-B"
            },
            "vpc_id": "vpc-09dc4f72e538d074c"
          },
          "dependencies": [
            "module.compute.aws_vpc.pm4_client_vpc",
            "module.compute.data.aws_availability_zones.pm4_client_azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pm4_client_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580741598336:vpc/vpc-09dc4f72e538d074c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06c619c652427e740",
            "default_route_table_id": "rtb-011b5bc99b09c68ed",
            "default_security_group_id": "sg-079007c7f095e7845",
            "dhcp_options_id": "dopt-0edd770d7b34e3be2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09dc4f72e538d074c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-011b5bc99b09c68ed",
            "owner_id": "580741598336",
            "tags": {
              "Name": "PM4-example-VPC"
            },
            "tags_all": {
              "Name": "PM4-example-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}